# mosh

./: Cargo.toml  POSH.md  README.md  flake.nix  justfile
crates/posh/: Cargo.toml
crates/posh-rec/: Cargo.toml
crates/posh-rec/src/: assert.rs  cli.rs  golden.rs  lib.rs  main.rs  player.rs  record.rs
crates/posh-rec/tests/: golden_cli.rs  oracle.rs  record.rs
crates/posh-term/: Cargo.toml  build.rs
crates/posh-term/src/: cell.rs  dump.rs  lib.rs
crates/posh-term/tests/: extensions.rs
crates/posh/src/: completions.rs  main.rs  pty.rs  tailnet.rs  target.rs  util.rs
crates/posh/src/remote/: client.rs  datagram.rs  server.rs  sshwrap.rs  stats.rs
crates/posh/src/session/: client.rs
crates/posh/tests/: signal_integration.rs
doc/: posh-client.1.scd  posh.1.scd
docs/: posht.md
docs/decisions/: 0002-wheel-grab-input-transform.md
docs/features/: 0003-mosh-parity-surface.md
docs/plans/: 2026-06-11-host-session-namespace-impl.md  2026-06-12-ssh-agent-forwarding-design.md
docs/rfcs/: 0001-target-grammar-and-capability-table.md
posht/: README.md  main.go  proctree.go  report.go  root.go  run-remote.sh  test.go  tests_interactive.go
