[package]
name = "posh-rec"
version.workspace = true # inert placeholder; real version flows from version.env (see root Cargo.toml)
description = "Deterministic, step-ratcheted terminal recorder/replayer built on posh-term"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
posh-term = { path = "../posh-term" }
