[package]
name = "posh-term"
version.workspace = true # inert placeholder; real version flows from version.env (see root Cargo.toml)
description = "A standalone terminal emulation library: a Rust rewrite of the ghostty-vt core, targeting full kitty feature parity"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
